Updated UQM non-HD, made separate config file for Ouya port

--- a/project/jni/application/uqm-hd/AndroidAppSettings-ouya.cfg
+++ b/project/jni/application/uqm-hd/AndroidAppSettings-ouya.cfg
@@ -23,7 +23,10 @@ InhibitSuspend=n
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
 # Also please avoid 'https://' URLs, many Android devices do not have trust certificates and will fail to connect to SF.net over HTTPS
-AppDataDownloadUrl="!!640x480 graphics (160 Mb)|:packages/hires2x.uqm:http://sourceforge.net/projects/libsdl-android/files/Ur-Quan%20Masters/uqm-hd-hires2x_0.2.uqm/download^1280x960 graphics (360 Mb)|:packages/hires4x.uqm:http://sourceforge.net/projects/libsdl-android/files/Ur-Quan%20Masters/uqm-hd-hires4x_0.2.uqm/download^!UQM music remix pack (240 Mb)|:addons/uqm-remix.uqm:http://sourceforge.net/projects/libsdl-android/files/Ur-Quan%20Masters/uqm-remix.uqm/download^3DO music (20 Mb)|:addons/uqm-0.7.0-3domusic.uqm:http://sourceforge.net/projects/sc2/files/UQM/0.7/uqm-0.7.0-3domusic.uqm/download^!English voice pack (150 Mb)|:addons/uqm-0.7.0-voice.uqm:http://sourceforge.net/projects/libsdl-android/files/Ur-Quan%20Masters/uqm-hd-voice_0.2.uqm/download^Japanese voice pack (130 Mb)|:addons/uqm-0.7.0-voice.uqm:http://sourceforge.net/projects/libsdl-android/files/Ur-Quan%20Masters/uqm-hd-voice-jp_0.2.uqm/download^Russian translation|:addons/lang/shadow-content/lang.zip:http://sourceforge.net/projects/libsdl-android/files/Ur-Quan%20Masters/translations/2/russian2.zip/download^Deutsch translation|:addons/lang/shadow-content/lang.zip:http://sourceforge.net/projects/libsdl-android/files/Ur-Quan%20Masters/translations/2/deutsch.zip/download^Spanish translation|:addons/lang/shadow-content/lang.zip:http://sourceforge.net/projects/libsdl-android/files/Ur-Quan%20Masters/translations/2/spanish.zip/download^Slovak translation|:addons/lang/shadow-content/lang.zip:http://sourceforge.net/projects/libsdl-android/files/Ur-Quan%20Masters/translations/2/slovak.zip/download^Finnish translation|:addons/lang/shadow-content/lang.zip:http://sourceforge.net/projects/libsdl-android/files/Ur-Quan%20Masters/translations/2/finnish.zip/download^!!Game data|data.zip^!!Game data|:packages/uqm-content.uqm:http://sourceforge.net/projects/libsdl-android/files/Ur-Quan%20Masters/uqm-hd-content_0.2.uqm/download"
+
+# Downloads for OUYA, thay all are packed inside .apk
+AppDataDownloadUrl="!English voice pack (150 Mb)|:addons/uqm-0.7.0-voice.uqm:uqm-hd-voice_0.2.uqm^Japanese voice pack (130 Mb)|:addons/uqm-0.7.0-voice.uqm:uqm-hd-voice-jp_0.2.uqm^Russian translation|:addons/lang/shadow-content/lang.zip:russian2.zip^Deutsch translation|:addons/lang/shadow-content/lang.zip:deutsch.zip^Spanish translation|:addons/lang/shadow-content/lang.zip:spanish.zip^Slovak translation|:addons/lang/shadow-content/lang.zip:slovak.zip^Finnish translation|:addons/lang/shadow-content/lang.zip:finnish.zip^!!Game data|data.zip^!!Game data|:packages/uqm-content.uqm:uqm-hd-content_0.2.uqm^!!640x480 graphics (160 Mb)|:packages/hires2x.uqm:uqm-hd-hires2x_0.2.uqm^!!1280x960 graphics (360 Mb)|:packages/hires4x.uqm:uqm-hd-hires4x_0.2.uqm^!!UQM music remix pack (240 Mb)|:addons/uqm-remix.uqm:uqm-remix.uqm"
+
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
@@ -170,10 +173,10 @@ MultiABI=y
 AppMinimumRAM=0
 
 # Application version code (integer)
-AppVersionCode=07003
+AppVersionCode=07002
 
 # Application user-visible version name (string)
-AppVersionName="0.7.0.03"
+AppVersionName="0.7.0.02"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=n
@@ -209,7 +212,7 @@ AppCmdline='uqm -x -f --addon android --addon lang'
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
-ReadmeText='Tap joystick to turn off engines and rotate ship, tap once more to enable engines.\\\\nSecond screen joystick is available for two-player melee.\\\\nDo not select multiple translations, only one will work.\\\\nIf the game runs slowly - set 640x480 video mode from Setup menu.'
+ReadmeText='\\\\nDo not select multiple translations, only one will work.\\\\nIf the game runs slowly - set 640x480 video mode from Setup menu.'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
