Fixed crash with ShowMouseCursor=y, immersive mode for KitKat

--- a/project/jni/application/uqm-hd/AndroidAppSettings-ouya.cfg
+++ b/project/jni/application/uqm-hd/AndroidAppSettings-ouya.cfg
@@ -24,7 +24,9 @@ InhibitSuspend=n
 # these files are put inside .apk package by build system
 # Also please avoid 'https://' URLs, many Android devices do not have trust certificates and will fail to connect to SF.net over HTTPS
 
+
 # Downloads for OUYA, thay all are packed inside .apk
+# Also, don't forget to set INIT_CONFIG_OPTION(  resolutionFactor,  2 ) inside uqm.c
 AppDataDownloadUrl="!English voice pack (150 Mb)|:addons/uqm-0.7.0-voice.uqm:uqm-hd-voice_0.2.uqm^Japanese voice pack (130 Mb)|:addons/uqm-0.7.0-voice.uqm:uqm-hd-voice-jp_0.2.uqm^Russian translation|:addons/lang/shadow-content/lang.zip:russian2.zip^Deutsch translation|:addons/lang/shadow-content/lang.zip:deutsch.zip^Spanish translation|:addons/lang/shadow-content/lang.zip:spanish.zip^Slovak translation|:addons/lang/shadow-content/lang.zip:slovak.zip^Finnish translation|:addons/lang/shadow-content/lang.zip:finnish.zip^!!Game data|data.zip^!!Game data|:packages/uqm-content.uqm:uqm-hd-content_0.2.uqm^!!640x480 graphics (160 Mb)|:packages/hires2x.uqm:uqm-hd-hires2x_0.2.uqm^!!1280x960 graphics (360 Mb)|:packages/hires4x.uqm:uqm-hd-hires4x_0.2.uqm^!!UQM music remix pack (240 Mb)|:addons/uqm-remix.uqm:uqm-remix.uqm"
 
 
@@ -153,7 +155,7 @@ TouchscreenKeysTheme=2
 RedefinedKeysGamepad="RCTRL RSHIFT END ESCAPE RCTRL PAGEUP RSHIFT PAGEDOWN END W"
 
 # How long to show startup menu button, in msec, 0 to disable startup menu
-StartupMenuButtonTimeout=3000
+StartupMenuButtonTimeout=0
 
 # Menu items to hide from startup menu, available menu items:
 #  SettingsMenu.OkButton SettingsMenu.DummyMenu SettingsMenu.MainMenu  SettingsMenuMisc.DownloadConfig SettingsMenuMisc.OptionalDownloadConfig SettingsMenuMisc.AudioConfig SettingsMenuMisc.VideoSettingsConfig SettingsMenuMisc.ShowReadme SettingsMenuMisc.GyroscopeCalibration SettingsMenuMisc.ResetToDefaultsConfig  SettingsMenuMouse.MouseConfigMainMenu SettingsMenuMouse.DisplaySizeConfig SettingsMenuMouse.LeftClickConfig SettingsMenuMouse.RightClickConfig SettingsMenuMouse.AdditionalMouseConfig SettingsMenuMouse.JoystickMouseConfig SettingsMenuMouse.TouchPressureMeasurementTool SettingsMenuMouse.CalibrateTouchscreenMenu  SettingsMenuKeyboard.KeyboardConfigMainMenu SettingsMenuKeyboard.ScreenKeyboardSizeConfig SettingsMenuKeyboard.ScreenKeyboardDrawSizeConfig SettingsMenuKeyboard.ScreenKeyboardThemeConfig SettingsMenuKeyboard.ScreenKeyboardTransparencyConfig SettingsMenuKeyboard.RemapHwKeysConfig SettingsMenuKeyboard.RemapScreenKbConfig SettingsMenuKeyboard.ScreenGesturesConfig SettingsMenuKeyboard.CustomizeScreenKbLayout 
@@ -173,10 +175,10 @@ MultiABI=y
 AppMinimumRAM=0
 
 # Application version code (integer)
-AppVersionCode=07002
+AppVersionCode=07003
 
 # Application user-visible version name (string)
-AppVersionName="0.7.0.02"
+AppVersionName="0.7.0.03"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=n
