--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -47,7 +47,7 @@ SwVideoMode=y
 SdlVideoResize=y
 
 # Application resizing will keep 4:3 aspect ratio, with black bars at sides (y)/(n)
-SdlVideoResizeKeepAspect=y
+SdlVideoResizeKeepAspect=n
 
 # Application does not call SDL_Flip() or SDL_UpdateRects() appropriately, or draws from non-main thread -
 # enabling the compatibility mode will force screen update every 100 milliseconds, which is laggy and inefficient (y) or (n)
@@ -82,7 +82,7 @@ AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 
 # Show SDL mouse cursor, for applications that do not draw cursor at all (y) or (n)
-ShowMouseCursor=n
+ShowMouseCursor=y
 
 # Force relative (laptop) mouse movement mode, useful when both on-screen keyboard and mouse are needed (y) or (n)
 ForceRelativeMouseMode=n
