Xserver: select video mode and font scale at start

--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -23,7 +23,7 @@ InhibitSuspend=n
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
 # Also please avoid 'https://' URLs, many Android devices do not have trust certificates and will fail to connect to SF.net over HTTPS
-AppDataDownloadUrl="!!Data files|:data.tar.gz:data-1.tgz^!!Data files|:busybox:busybox"
+AppDataDownloadUrl="!!Data files|:data.tar.gz:data-1.tgz^!!Data files|:busybox:busybox^!!Data files|:DroidSansMono.ttf:DroidSansMono.ttf"
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
@@ -124,7 +124,7 @@ NonBlockingSwapBuffers=n
 # SEARCH and CALL by default return same keycode as DPAD_CENTER - one of those keys is available on most devices
 # Use word NO_REMAP if you want to preserve native functionality for certain key (volume keys are 3-rd and 4-th)
 # Keys: TOUCHSCREEN (works only when AppUsesMouse=n), DPAD_CENTER/SEARCH, VOLUMEUP, VOLUMEDOWN, MENU, BACK, CAMERA
-RedefinedKeys="LALT RETURN NO_REMAP NO_REMAP RETURN ESCAPE"
+RedefinedKeys="LALT RETURN NO_REMAP NO_REMAP RETURN UNDO"
 
 # Number of virtual keyboard keys (currently 6 is maximum)
 AppTouchscreenKeyboardKeysAmount=0
@@ -184,7 +184,7 @@ DeleteFilesOnUpgrade="%"
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
 # Available libraries: mad (GPL-ed!) sdl_mixer sdl_image sdl_ttf sdl_net sdl_blitpool sdl_gfx sdl_sound intl xml2 lua jpeg png ogg flac tremor vorbis freetype xerces curl theora fluidsynth lzma lzo2 mikmod openal timidity zzip bzip2 yaml-cpp python boost_date_time boost_filesystem boost_iostreams boost_program_options boost_regex boost_signals boost_system boost_thread glu avcodec avdevice avfilter avformat avresample avutil swscale swresample bzip2 
-CompiledLibraries="jpeg png freetype sdl-1.2"
+CompiledLibraries="jpeg png freetype sdl_ttf"
 
 # Application uses custom build script AndroidBuild.sh instead of Android.mk (y) or (n)
 CustomBuildScript=y
