Support for touch event history, for more accurate drawing.

--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -6,10 +6,10 @@ AppSettingVersion=19
 LibSdlVersion=1.2
 
 # Specify application name (e.x. My Application)
-AppName="XSDL X server"
+AppName="XServer XSDL"
 
 # Specify reversed site name of application (e.x. com.mysite.myapp)
-AppFullName=X.org.server
+AppFullName=x.org.server
 
 # Specify screen orientation: (v)ertical/(p)ortrait or (h)orizontal/(l)andscape
 ScreenOrientation=h
@@ -83,6 +83,8 @@ AppNeedsTwoButtonMouse=y
 
 # Show SDL mouse cursor, for applications that do not draw cursor at all (y) or (n)
 ShowMouseCursor=n
+
+GenerateSubframeTouchEvents=y
 
 # Force relative (laptop) mouse movement mode, useful when both on-screen keyboard and mouse are needed (y) or (n)
 ForceRelativeMouseMode=n
