Option to use SDL_UpdateRects optimization, updated XServer

--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -75,6 +75,8 @@ CompatibilityHacksSlowCompatibleEventQueue=n
 # Save and restore OpenGL state when drawing on-screen keyboard for apps that use SDL_OPENGL
 CompatibilityHacksTouchscreenKeyboardSaveRestoreOpenGLState=
 
+CompatibilityHacksProperUsageOfSDL_UpdateRects=y
+
 # Application uses mouse (y) or (n), this will show mouse emulation dialog to the user
 AppUsesMouse=y
 
