--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -49,6 +49,8 @@ SdlVideoResize=y
 # Application resizing will keep 4:3 aspect ratio, with black bars at sides (y)/(n)
 SdlVideoResizeKeepAspect=n
 
+CompatibilityHacksProperUsageOfSDL_UpdateRects=y
+
 # Application does not call SDL_Flip() or SDL_UpdateRects() appropriately, or draws from non-main thread -
 # enabling the compatibility mode will force screen update every 100 milliseconds, which is laggy and inefficient (y) or (n)
 CompatibilityHacks=n
