--- a/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
@@ -6,10 +6,10 @@ AppSettingVersion=19
 LibSdlVersion=1.2
 
 # Specify application name (e.x. My Application)
-AppName="XServer XSDL"
+AppName="GIMP Inkscape"
 
 # Specify reversed site name of application (e.x. com.mysite.myapp)
-AppFullName=x.org.server
+AppFullName=org.gimp.inkscape
 
 # Specify screen orientation: (v)ertical/(p)ortrait or (h)orizontal/(l)andscape
 ScreenOrientation=h
@@ -23,7 +23,7 @@ InhibitSuspend=n
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
 # Also please avoid 'https://' URLs, many Android devices do not have trust certificates and will fail to connect to SF.net over HTTPS
-AppDataDownloadUrl="!!Data files|:data.tar.gz:data-1.tgz^!!Data files|:busybox:busybox^!!Data files|:DroidSansMono.ttf:DroidSansMono.ttf"
+AppDataDownloadUrl="!!Data files|:data.tar.gz:http://sourceforge.net/projects/libsdl-android/files/ubuntu/dist-debug-wheezy-armhf-gimp.tar.gz/download^!!Data files|:busybox:busybox^!!Data files|:DroidSansMono.ttf:DroidSansMono.ttf"
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
@@ -174,10 +174,10 @@ MultiABI=armeabi-v7a
 AppMinimumRAM=0
 
 # Application version code (integer)
-AppVersionCode=11104
+AppVersionCode=28601
 
 # Application user-visible version name (string)
-AppVersionName="1.11.04"
+AppVersionName="2.8.6.01"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=n
@@ -209,7 +209,7 @@ AppSubdirsBuild=''
 AppBuildExclude=''
 
 # Application command line parameters, including app name as 0-th param
-AppCmdline='XSDL'
+AppCmdline='XSDL -nohelp /data/data/org.gimp.inkscape/files/chroot.sh bin/sh -c ./start-gimp.sh'
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
