Mouse controls in opentyrian are back

--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -95,7 +95,7 @@ GenerateSubframeTouchEvents=
 ForceRelativeMouseMode=n
 
 # Application needs arrow keys (y) or (n), will show on-screen dpad/joystick (y) or (n)
-AppNeedsArrowKeys=y
+AppNeedsArrowKeys=n
 
 # Application needs text input (y) or (n), enables button for text input on screen
 AppNeedsTextInput=y
@@ -171,16 +171,16 @@ FirstStartMenuOptions=''
 
 # Enable multi-ABI binary, with hardware FPU support - it will also work on old devices,
 # but .apk size is 2x bigger (y) / (n) / (x86) / (all)
-MultiABI=n
+MultiABI=all
 
 # Minimum amount of RAM application requires, in Mb, SDL will print warning to user if it's lower
 AppMinimumRAM=32
 
 # Application version code (integer)
-AppVersionCode=2121
+AppVersionCode=2123
 
 # Application user-visible version name (string)
-AppVersionName="2.1.21"
+AppVersionName="2.1.23"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=n
