VCMI Update to 0.94 giving another shot to build this

--- a/project/jni/application/vcmi/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi/AndroidAppSettings.cfg
@@ -75,6 +75,10 @@ CompatibilityHacksSlowCompatibleEventQueue=n
 # Save and restore OpenGL state when drawing on-screen keyboard for apps that use SDL_OPENGL
 CompatibilityHacksTouchscreenKeyboardSaveRestoreOpenGLState=
 
+# Application uses SDL_UpdateRects() properly, and does not draw in any region outside those rects.
+# This improves drawing speed, but I know only one application that does that, and it's written by me (y)/(n)
+CompatibilityHacksProperUsageOfSDL_UpdateRects=
+
 # Application uses mouse (y) or (n), this will show mouse emulation dialog to the user
 AppUsesMouse=y
 
@@ -83,6 +87,9 @@ AppNeedsTwoButtonMouse=y
 
 # Show SDL mouse cursor, for applications that do not draw cursor at all (y) or (n)
 ShowMouseCursor=n
+
+# Generate more touch events, by default SDL generates one event per one video frame, this is useful for drawing apps (y) or (n)
+GenerateSubframeTouchEvents=
 
 # Force relative (laptop) mouse movement mode, useful when both on-screen keyboard and mouse are needed (y) or (n)
 ForceRelativeMouseMode=n
@@ -137,6 +144,17 @@ RedefinedKeysScreenKb="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINU
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
 RedefinedKeysScreenKbNames="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
+
+# On-screen keys theme
+# 0 = Ultimate Droid by Sean Stieber (green, with gamepad joystick)
+# 1 = Simple Theme by Beholder (white, with gamepad joystick)
+# 2 = Sun by Sirea (yellow, with round joystick)
+# 3 = Keen by Gerstrong (multicolor, with round joystick)
+TouchscreenKeysTheme=
+
+# Redefine gamepad keys to SDL keysyms, button order is:
+# A B X Y L1 R1 L2 R2 LThumb RThumb
+RedefinedKeysGamepad="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP_MINUS 1 2"
 
 # How long to show startup menu button, in msec, 0 to disable startup menu
 StartupMenuButtonTimeout=3000
@@ -197,7 +215,7 @@ AppBuildExclude=''
 AppCmdline=''
 
 # Here you may type readme text, which will be shown during startup. Format is:
-# Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
+# Text in English, use \\\\\\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
 ReadmeText='^You may press "Home" now - the data will be downloaded in background'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
