Xserver-gimp: Menu key will send Ctrl-Z key event

--- a/project/jni/application/xserver/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver/AndroidAppSettings.cfg
@@ -128,7 +128,7 @@ NonBlockingSwapBuffers=n
 # SEARCH and CALL by default return same keycode as DPAD_CENTER - one of those keys is available on most devices
 # Use word NO_REMAP if you want to preserve native functionality for certain key (volume keys are 3-rd and 4-th)
 # Keys: TOUCHSCREEN (works only when AppUsesMouse=n), DPAD_CENTER/SEARCH, VOLUMEUP, VOLUMEDOWN, MENU, BACK, CAMERA
-RedefinedKeys="LALT RETURN NO_REMAP NO_REMAP RETURN UNDO"
+RedefinedKeys="LALT UNDO NO_REMAP NO_REMAP UNDO HELP"
 
 # Number of virtual keyboard keys (currently 6 is maximum)
 AppTouchscreenKeyboardKeysAmount=0
@@ -174,13 +174,13 @@ MultiABI=armeabi-v7a
 AppMinimumRAM=0
 
 # Application version code (integer)
-AppVersionCode=11104
+AppVersionCode=11105
 
 # Application user-visible version name (string)
-AppVersionName="1.11.04"
+AppVersionName="1.11.05"
 
 # Reset SDL config when updating application to the new version (y) / (n)
-ResetSdlConfigForThisVersion=n
+ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
 DeleteFilesOnUpgrade="%"
