--- a/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
+++ b/project/jni/application/xserver-gimp/AndroidAppSettings.cfg
@@ -86,7 +86,8 @@ AppNeedsTwoButtonMouse=y
 # Show SDL mouse cursor, for applications that do not draw cursor at all (y) or (n)
 ShowMouseCursor=n
 
-GenerateSubframeTouchEvents=y
+# Users are complaining that the video output is slow, so screw pen precision
+GenerateSubframeTouchEvents=n
 
 # Force relative (laptop) mouse movement mode, useful when both on-screen keyboard and mouse are needed (y) or (n)
 ForceRelativeMouseMode=n
