--- a/project/jni/application/vcmi/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi/AndroidAppSettings.cfg
@@ -2,6 +2,9 @@
 
 AppSettingVersion=19
 
+# Debuggable Build? (y) or (n):
+Debuggable=false
+
 # libSDL version to use (1.2 or 1.3, specify 1.3 for SDL2)
 LibSdlVersion=1.2
 
