--- a/project/jni/application/vcmi/AndroidAppSettings.cfg
+++ b/project/jni/application/vcmi/AndroidAppSettings.cfg
@@ -2,9 +2,6 @@
 
 AppSettingVersion=19
 
-# Debuggable Build? (y) or (n):
-Debuggable=false
-
 # libSDL version to use (1.2 or 1.3, specify 1.3 for SDL2)
 LibSdlVersion=1.2
 
@@ -153,7 +150,7 @@ RedefinedKeysScreenKbNames="LALT RETURN KP_PLUS KP_MINUS SPACE DELETE KP_PLUS KP
 # 1 = Simple Theme by Beholder (white, with gamepad joystick)
 # 2 = Sun by Sirea (yellow, with round joystick)
 # 3 = Keen by Gerstrong (multicolor, with round joystick)
-TouchscreenKeysTheme=
+TouchscreenKeysTheme=1
 
 # Redefine gamepad keys to SDL keysyms, button order is:
 # A B X Y L1 R1 L2 R2 LThumb RThumb
