Guichan-xml: example how to use absolute touch coordinates instead of emulated mouse events in Guichan

--- a/project/jni/application/guichan-xml/AndroidAppSettings.cfg
+++ b/project/jni/application/guichan-xml/AndroidAppSettings.cfg
@@ -75,6 +75,10 @@ CompatibilityHacksSlowCompatibleEventQueue=n
 # Save and restore OpenGL state when drawing on-screen keyboard for apps that use SDL_OPENGL
 CompatibilityHacksTouchscreenKeyboardSaveRestoreOpenGLState=
 
+# Application uses SDL_UpdateRects() properly, and does not draw in any region outside those rects.
+# This improves drawing speed, but I know only one application that does that, and it's written by me (y)/(n)
+CompatibilityHacksProperUsageOfSDL_UpdateRects=
+
 # Application uses mouse (y) or (n), this will show mouse emulation dialog to the user
 AppUsesMouse=y
 
@@ -82,10 +86,13 @@ AppUsesMouse=y
 AppNeedsTwoButtonMouse=y
 
 # Show SDL mouse cursor, for applications that do not draw cursor at all (y) or (n)
-ShowMouseCursor=n
+ShowMouseCursor=y
+
+# Generate more touch events, by default SDL generates one event per one video frame, this is useful for drawing apps (y) or (n)
+GenerateSubframeTouchEvents=
 
 # Force relative (laptop) mouse movement mode, useful when both on-screen keyboard and mouse are needed (y) or (n)
-ForceRelativeMouseMode=n
+ForceRelativeMouseMode=y
 
 # Application needs arrow keys (y) or (n), will show on-screen dpad/joystick (y) or (n)
 AppNeedsArrowKeys=n
@@ -106,7 +113,7 @@ AppUsesAccelerometer=n
 AppUsesGyroscope=n
 
 # Application uses multitouch (y) or (n), multitouch events are passed as SDL_JOYBALLMOTION events for the joystick 0
-AppUsesMultitouch=n
+AppUsesMultitouch=y
 
 # Application records audio (it will use any available source, such a s microphone)
 # API is defined in file SDL_android.h: int SDL_ANDROID_OpenAudioRecording(SDL_AudioSpec *spec); void SDL_ANDROID_CloseAudioRecording(void);
@@ -179,7 +186,7 @@ AppVersionName="1.01"
 ResetSdlConfigForThisVersion=n
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
-DeleteFilesOnUpgrade=""
+DeleteFilesOnUpgrade="%"
 
 # Optional shared libraries to compile - removing some of them will save space
 # MP3 support by libMAD is encumbered by patents and libMAD is GPL-ed
