Added app_icon.png required by Ouya

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ project/jni/Settings.mk
 project/jni/application/*/libapplication*.so
 project/jni/application/src
 project/res/drawable-xhdpi/ouya_icon.png
+project/res/drawable/app_icon.png
+
