--- a/project/jni/application/teeworlds/AndroidAppSettings.cfg
+++ b/project/jni/application/teeworlds/AndroidAppSettings.cfg
@@ -103,7 +103,7 @@ AppUsesSecondJoystick=y
 AppUsesAccelerometer=n
 
 # Application uses gyroscope (y) or (n), the gyroscope will be used as joystick 1 axes 2-4
-AppUsesGyroscope=y
+AppUsesGyroscope=n
 
 # Application uses multitouch (y) or (n), multitouch events are passed as SDL_JOYBALLMOTION events for the joystick 0
 AppUsesMultitouch=n
@@ -133,10 +133,10 @@ AppTouchscreenKeyboardKeysAmount=4
 AppTouchscreenKeyboardKeysAmountAutoFire=0
 
 # Redefine on-screen keyboard keys to SDL keysyms - 6 keyboard keys + 4 multitouch gestures (zoom in/out and rotate left/right)
-RedefinedKeysScreenKb="SPACE PAGEDOWN PAGEUP TAB RETURN RCTRL"
+RedefinedKeysScreenKb="RETURN PAGEDOWN PAGEUP TAB SPACE RCTRL"
 
 # Names for on-screen keyboard keys, such as Fire, Jump, Run etc, separated by spaces, they are used in SDL config menu
-RedefinedKeysScreenKbNames="Jump Next_weapon Previous_weapon Show_scores Hook Fire"
+RedefinedKeysScreenKbNames="Hook Next_weapon Previous_weapon Show_scores Jump Fire"
 
 # On-screen keys theme
 # 0 = Ultimate Droid by Sean Stieber (green, with gamepad joystick)
@@ -164,16 +164,16 @@ FirstStartMenuOptions=''
 
 # Enable multi-ABI binary, with hardware FPU support - it will also work on old devices,
 # but .apk size is 2x bigger (y) / (n) / (x86) / (all)
-MultiABI=y
+MultiABI=all
 
 # Minimum amount of RAM application requires, in Mb, SDL will print warning to user if it's lower
 AppMinimumRAM=0
 
 # Application version code (integer)
-AppVersionCode=06215
+AppVersionCode=06217
 
 # Application user-visible version name (string)
-AppVersionName="0.6.2.15"
+AppVersionName="0.6.2.17"
 
 # Reset SDL config when updating application to the new version (y) / (n)
 ResetSdlConfigForThisVersion=y
@@ -209,7 +209,7 @@ AppCmdline=''
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
-ReadmeText='Tap left joystick to launch hook\\\\nSwipe left joystick up or down to jump\\\\nTilt your phone/tablet to jump^ouya:'
+ReadmeText='Tap left joystick while aiming to launch hook\\\\nSwipe left joystick up or down to jump^ouya:'
 
 # Screen size is used by Google Play to prevent an app to be installed on devices with smaller screens
 # Minimum screen size that application supports: (s)mall / (m)edium / (l)arge
